--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -11,7 +11,7 @@ nav {
             margin: 1rem;
 
             a {
-                padding: 1rem 3rem;
+                padding: 1rem 2vw;
                 font-size: 2rem;
                 font-weight: bold;
                 color: black;
