--- a/styles/sass/_contactForm.scss
+++ b/styles/sass/_contactForm.scss
@@ -2,11 +2,14 @@
 
 form {
     width: 100%;
-    height: 35vh;
+    height: 60vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 5rem 1fr 5rem;
     grid-gap: 15px;
+    font-size: 2.5rem;
+    // margin-top: 5rem;
+    margin-bottom: 5rem;
 
     .textField {
         grid-area: 2 / span 2;
@@ -15,9 +18,5 @@ form {
     .commentButton {
         grid-area: 3 / span 2;
         width: 100%;
-    }
-
-    &::placeholder {
-        @include fluid-type (90px, 160px, 360px, 1950px);
     }
 }
