--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -32,6 +32,7 @@
 // Put background to the main section of the body.
 .mainBody {
     background: #f6f6f6;
+    width: 100vw;
 
     .blogFlex {
         display: flex;
@@ -40,16 +41,19 @@
         justify-content: center;
         align-content: stretch;
         align-items: flex-start;
-        margin: 5rem 0 3rem 3rem;
+        margin: 8rem 0 0 0;
+        width: 100%;
 
         .blogAside {
             width: 28%;
-            max-width: 28%;
-            padding: 4rem;
+            max-width: 380px;
+            min-width: 350px;
+            margin-right: 3rem;
 
             .aside1 {
                 background: white;
                 padding: 4rem;
+                width: 100%;
 
                 a {
                     color: $greyBlue;
@@ -60,6 +64,10 @@
                 background: white;
                 padding: 4rem;
                 margin-top: 3rem;
+
+                li {
+                    display: flex;
+                }
 
                 ul li {
                     list-style-type: none;
@@ -75,15 +83,8 @@
             }
         }
 
-        .asideDiv {
-            width: 28%;
-            background: white;
-            margin-top: 3rem;
-        }
-
         .blogMain {
-            width: 60%;
-            margin-top: 4rem;
+            width: 55%;
 
             .blogBox {
                 background: white;
@@ -109,7 +110,8 @@
         }
 
         .commentText {
-            width: 80%;
+            width: 75%;
+            margin-left: 2rem;
         }
     }
 
