--- a/styles/sass/_variablesMixins.scss
+++ b/styles/sass/_variablesMixins.scss
@@ -38,27 +38,31 @@ $whiteShadeColor: #F6F6F6;
     }
 }
 
-
-
-// Taken from @site https://codepen.io/dbox/pen/meaMba (Mixin Fluid Type)
-@mixin fluid-type($min-font-size: 12px, $max-font-size: 21px, $lower-range: 420px, $upper-range: 900px) {
-
-    font-size: calc(#{$min-font-size} + #{(($max-font-size / ($max-font-size * 0 + 1)) - ($min-font-size / ($min-font-size * 0 + 1)))} * ((100vw - #{$lower-range}) / #{(($upper-range / ($upper-range * 0 + 1)) - ($lower-range / ($lower-range * 0 + 1)))}));
-
-    @media screen and (max-width: $lower-range) {
-        font-size: $min-font-size;
-    }
-
-    @media screen and (min-width: $upper-range) {
-        font-size: $max-font-size;
+@mixin max-width($breakpoint) {
+    @media (max-width: $breakpoint) {
+        @content;
     }
 }
 
-// Div padding
-@mixin divPadding {
-    padding: 5rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 0 auto;
-}
+    // Taken from @site https://codepen.io/dbox/pen/meaMba (Mixin Fluid Type)
+    @mixin fluid-type($min-font-size: 12px, $max-font-size: 21px, $lower-range: 420px, $upper-range: 900px) {
+
+        font-size: calc(#{$min-font-size} + #{(($max-font-size / ($max-font-size * 0 + 1)) - ($min-font-size / ($min-font-size * 0 + 1)))} * ((100vw - #{$lower-range}) / #{(($upper-range / ($upper-range * 0 + 1)) - ($lower-range / ($lower-range * 0 + 1)))}));
+
+        @media screen and (max-width: $lower-range) {
+            font-size: $min-font-size;
+        }
+
+        @media screen and (min-width: $upper-range) {
+            font-size: $max-font-size;
+        }
+    }
+
+    // Div padding
+    @mixin divPadding {
+        padding: 5rem;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin: 0 auto;
+    }
